[package]
name = "cw404"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
cw2 = "1.1.1"
thiserror = "1.0.50"
cw-multi-test = { version = "0.17.0", optional = true}
anyhow = {version = "1.0.75", optional = true}
cw20 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw404-package = { path = "../../packages/cw404-package", version = "0.1.0" }
cw721 = "0.18.0"

[dev-dependencies]
cw-multi-test = "0.17.0"
anyhow = "1.0.75"
